MDS-004: Add support to profile activity

--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -10,4 +10,6 @@
     <string name="historyBtn">Historico</string>
     <string name="profileBtn">Perfil</string>
     <string name="button">nextBtn</string>
+    <string name="sos_contact">Contato SOS</string>
+    <string name="phone_number">Número de Telemóvel:</string>
 </resources>
