Criei um exemplo de estrutura de dados json para perguntas
Criei classes em função do json criado
Criei alguns layout possiveis consoante o tipo de resposta
Agora é preciso pensar em como vamos mostrar cada pergunta(sugestã: recycler view ou talvez fragmentos)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="question2">intensidade da dor?(0-10)</string>
     <string name="question3">Hora de inicio da dor?</string>
     <string name="imgProfile">TODO</string>
+    <string name="next">next</string>
 </resources>
