--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="password" translatable="false">Password</string>
 
 
-
     <string name="userName">User Name</string>
     <string name="userID">User ID</string>
     <string name="name">Name</string>
@@ -25,4 +24,8 @@
     <string name="question3">Hora de inicio da dor?</string>
     <string name="imgProfile">TODO</string>
     <string name="next">next</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="question">xpto</string>
 </resources>
