--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="prev_question_button">Prev</string>
     <string name="final_message">finished click next to submit your answer</string>
     <string name="submit">Submit</string>
+    <string name="notify_Schedule_Text">what the time do you pertend receive a notify?</string>
+    <string name="header_Notification" translatable="false">Quiz</string>
+    <string name="notification_message">Don\'t Forget to do Quiz</string>
 </resources>
