--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">SDS</string>
     <string name="historyBtn">Historico</string>
     <string name="name">Nome</string>
     <string name="phone_number">Telefone</string>
@@ -16,4 +15,9 @@
     <string name="submit">Submeter</string>
     <string name="notify_Schedule_Text">A que horas pretende ser relembrado?</string>
     <string name="notification_message">Não se esqueça do Quiz</string>
+
+    <!--General-->
+    <string name="sds_title_short">SDS (DHS)</string>
+    <string name="sds_title_long">Digital Health System</string>
+    <string name="sds_title_long_caps">DIGITAL HEALTH SYSTEM</string>
 </resources>
