--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="daily_desc" translatable="false">Daily</string>
     <string name="alert_settings_desc" translatable="false">Alert Settings</string>
 	<string name="submitQuiz">The quiz has been successfully submitted!</string>
+	<string name="historical_clinic">Historical Clinic</string>
 
 	<!--Profil-->
     <!--Daily-->
